openmpi (1.4.2-4) unstable; urgency=low

  * Added patch to remove use of AS_VAR_GET. Closes: #592892.
  * debian/control: Added powerpcspe to architecture list. Thanks to
    Sebastian Andrzej Siewior for the patch! Closes: #593481.
  * Updated Standards-Version to 3.9.1. No changes needed.

 -- Manuel Prinz <manuel@debian.org>  Wed, 01 Sep 2010 16:02:50 +0200

openmpi (1.4.2-3) unstable; urgency=low

  * Fixed build issue on kFreeBSD. Closes: #589467.
  * Added and updated patch meta-information.

 -- Manuel Prinz <manuel@debian.org>  Tue, 20 Jul 2010 17:31:52 +0200

openmpi (1.4.2-2) unstable; urgency=low

  * Fixed broken broken library symlinks. Closes: #589319.

 -- Manuel Prinz <manuel@debian.org>  Fri, 16 Jul 2010 20:49:24 +0200

openmpi (1.4.2-1) unstable; urgency=low

  * New upstream release. Closes: #585800.
  * Updated patches.
  * Updated Standards-Version. No changes needed.
  * Install previously uninstalled files. Closes: #589043.
  * Fixed several errors in man pages.

 -- Manuel Prinz <manuel@debian.org>  Thu, 15 Jul 2010 17:19:23 +0200

openmpi (1.4.1-3) unstable; urgency=low

  * Added slave alternatives symlinks for MPI FORTRAN libraries.
    Thanks to Adam C. Powell, IV for the patch! Closes: #563705.
  * Recommend openmpi-checkpoint only on available architectures.
  * Increased update-alternatives priority of libopenmpi-dev.

 -- Manuel Prinz <manuel@debian.org>  Thu, 25 Mar 2010 16:32:21 +0100

openmpi (1.4.1-2) unstable; urgency=low

  * Fixed build issues on HURD. Thanks to Pino Toscano for the patch!
    Closes: #552397.
  * Recreate autotools stuff during build. Added autoconf, automake,
    libtool and libltdl-dev to Build-Depends.
  * openmpi-checkpoint now depends on blcr-util. Closes: #572229.
  * Fixed symlink issues with ompi-{checkpoint,restart}. Closes: #572021.
  * Retroactively adding LP entries to close bugs in Ubuntu's Launchpad.

 -- Manuel Prinz <manuel@debian.org>  Thu, 18 Mar 2010 17:57:30 +0100
