@@ -27,7 +27,6 @@ ifeq (sparc,$(DEB_HOST_GNU_CPU))
 	CFLAGS += -mcpu=v9
 endif
 
-
 # BLCR checkpointing support
 BLCR_ARCH = "amd64 armel i386 powerpc"
 ifneq (,$(findstring $(DEB_HOST_ARCH),$(BLCR_ARCH)))
@@ -38,6 +37,12 @@ endif
 NUMA_ARCH = "amd64 i386 ia64 mips mipsel powerpc"
 ifneq (,$(findstring $(DEB_HOST_ARCH),$(NUMA_ARCH)))
         NUMA = --with-libnuma=/usr --with-libnuma-libdir=/usr/lib
+endif
+
+# Torque support. Does not build on HURD currently,
+#   should be fine on all other arches.
+ifneq (hurd-i386,$(DEB_HOST_ARCH))
+	TORQUE=--with-tm
 endif
 
 COMMON_CONFIG_PARAMS = \
@@ -51,7 +56,8 @@ COMMON_CONFIG_PARAMS = \
 			--libdir=\$${prefix}/lib/openmpi/lib	\
 			--includedir=\$${prefix}/lib/openmpi/include	\
 			--with-devel-headers \
-			--enable-heterogeneous
+			--enable-heterogeneous \
+			$(TORQUE)
 
 # Thread support disabled because it's broken, see bug #435581
 #                       --enable-mpi-threads                    \
